feat(auth): register with email
